# Japan_covid_19_map

./: README.md  main.py  pyproject.toml  requirements.txt
data/: edited_newly_confirmed_cases_daily.csv  japan_covid_19_cases_daily.csv  newly_confirmed_cases_daily.csv
note/: edit_data.ipynb
notebook/: edit_data.ipynb
